name:                defshef-blackjack
version:             0.1.0.0
license:             MIT
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blackjack
  build-depends:       base >= 4.7 && < 5
                     , split == 0.2.3
                     , regex-posix == 0.95.2
                     , random-shuffle == 0.0.4
  default-language:    Haskell2010

test-suite defshef-blackjack-test
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       base
                     , doctest == 0.10.1
                     , defshef-blackjack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
